# Adra-AI

./: .env.example  .gitignore  LICENSE  README.md  adraai.md  cleanup.sh  cli_usage.md  cmds.txt  docker-compose.prod.yml  docker-compose.yml  main.py  nginx.conf  notes.md  pyproject.toml  requirements.txt
agent/: graph.py  llm_client.py  prompts.py  state.py  tools.py
agent/repository/: chunker.py  code_aware_chunker.py  embeddings.py  file_hash.py  models.py  retriever.py  scanner.py  service.py  test.py  vector_store.py
backend/: Dockerfile  agent_integration.py  auth.py  background_tasks.py  db_models.py  error_handlers.py  main.py  rate_limit.py  requirements.txt  websocket_manager.py
backend/services/: vector_store.py
frontend/: Dockerfile  api-client.ts  file-preview.tsx  next.config.js  package-lock.json  package.json  websocket-hook.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatMessage.tsx  Orb.tsx  ProjectDirectoryViewer.tsx  Sidebar.tsx
frontend/lib/: chatStorage.ts
generated_project/: app.js  index.html  style.css
generated_project_blog_api_using_fastapi_and_sqlite/: ans.md
generated_project_blog_api_using_fastapi_and_sqlite/app/: schemas.py
generated_project_tic_tac_toe/: index.html  script.js  style.css
projects using integrator node/generated_project_1/: index.html
projects using integrator node/generated_project_tic_tac_toe/: style.css
projects using integrator node/generated_project_todo_list_web_app/: script.js  style.css
uploaded_repos/100729476641786303667_usd convert_1781322687/: style.css
(+17 files in other folders)
