[project]
name = "adra-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.37.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.2",
    "langsmith>=0.8.7",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
